# hyperbee

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml  python_test.sh  release.toml  uniffi.toml
.github/workflows/: ci.yml
docs/adrs/: README.md  ffi-layout.md
examples/: ram.rs  replicate.rs
gen_test_data/: index.js  package.json
src/: blocks.rs  changes.rs  del.rs  error.rs  external.rs  ffi.rs  hb.rs  hyperbee.udl  keys.rs  lib.rs  prefixed.rs  put.rs  test.rs  traverse.rs  tree.rs
src/test/: mod.rs  replicate.rs
tests/: basic.rs  disk.rs  ffi.rs  integration.rs  put.rs  py_tests.rs  python.rs  replicate.rs  rs-to-js.rs  with_replaced_values.rs
tests/c/: Makefile  test.c
tests/common/: Makefile  mod.rs  vars.mk
tests/common/c/: Makefile  mod.rs  test.c
tests/common/js/: .gitignore  Makefile  index.js  mod.rs  package.json  server.js
tests/common/python/: Makefile  foo.py  mod.rs
tests/js/: index.js  mod.rs  package.json
