[package]
name = "hyperbee"
version = "0.3.1"
license = "MIT OR Apache-2.0"
description = "Peer to Peer B-tree"
documentation = "https://docs.rs/hyperbee"
repository = "https://github.com/cowlicks/hyperbee"
readme = "README.md"
edition = "2021"
keywords = ["dat", "p2p", "btree", "hypercore"]
categories = [
  "algorithms",
  "asynchronous",
  "data-structures",
]

[lib]
name = "hyperbee"
crate-type = ["lib", "cdylib"]

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[features]
default = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
derive_builder = "0.12.0"
futures-lite = "2.1.0"
hypercore = "0.12.1"
prost = "0.12.1"
random-access-disk = "3.0.0"
random-access-memory = "3.0.0"
random-access-storage = "5.0.0"
thiserror = "1.0.50"
tokio = { version = "1.34.0", features = ["macros", "rt", "sync"] }
tokio-stream = "0.1.14"
tracing = "0.1.40"
uniffi = { version = "0.26.1", features = ["cli"] }

[build-dependencies]
prost-build = "0.12.1"
uniffi = { version = "0.26.1", features = ["build"] }

[dev-dependencies]
tracing-subscriber = "0.3.18"
tokio = { version = "1.34.0", features = ["rt-multi-thread"] }
async-recursion = "1.0.5"
random-access-memory = "3.0.0"
once_cell = "1.19.0"
tempfile = "3.10.0"
serde_json = "1.0.114"
